apps/ts-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-demo
  namespace: ts-demo
spec:
  selector:
    app.kubernetes.io/name: ts-demo
  ports:
    - name: http
      port: 80
      targetPort: http
